fix php version

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "php": "^7.2",
+    "php": "^8.1.*",
     "ext-tdlib": "*",
     "ext-json": "*",
     "symfony/framework-bundle": "^4.3",
